book: update mk
Updated via the `update-book.yml` GitHub workflow.

--- a/external/book/content/book/mk/v2/Git-Алатки-Revision-Selection.html
+++ b/external/book/content/book/mk/v2/Git-Алатки-Revision-Selection.html
@@ -17,6 +17,11 @@ book:
     next: book/mk/v2/Git-Алатки-Интерактивно-стажирање
 title: Git - Revision Selection
 url: "/book/mk/v2/Git-Алатки-Revision-Selection.html"
+aliases:
+- "/book/mk/Git-Tools.html"
+- "/book/mk/v1/Git-Tools.html"
+- "/book/mk/Git-Tools-Revision-Selection.html"
+- "/book/mk/v1/Git-Tools-Revision-Selection.html"
 ---
 <p>До сега сте научиле поголем дел од секојдневните команди и работни текови кои ви се потребни за управување или одржување на Git складиштето за вашата контрола на изворниот код.
 Ги постигнавте основните задачи за следење и зачувување на датотеки, и ја искористивте моќта на стадиумот и лесен разгранување и спојување на теми.</p><p>Сега ќе разгледате многу многу моќни нешта кои Git може да ги направи за да не мора да ги користите на ден-за-ден, но дека можеби ќе треба во некоја точка.</p>
