--- a/external/book/content/book/mk/v2/Git-Алатки-Stashing-and-Cleaning.html
+++ b/external/book/content/book/mk/v2/Git-Алатки-Stashing-and-Cleaning.html
@@ -17,6 +17,9 @@ book:
     next: book/mk/v2/Git-Алатки-Signing-Your-Work
 title: Git - Stashing and Cleaning
 url: "/book/mk/v2/Git-Алатки-Stashing-and-Cleaning.html"
+aliases:
+- "/book/mk/Git-Tools-Stashing.html"
+- "/book/mk/v1/Git-Tools-Stashing.html"
 ---
 <h2 id="_git_stashing">Stashing and Cleaning</h2>
 <div class="paragraph">
