--- a/external/book/content/book/mk/v2/Git-Алатки-Submodules.html
+++ b/external/book/content/book/mk/v2/Git-Алатки-Submodules.html
@@ -17,6 +17,9 @@ book:
     next: book/mk/v2/Git-Алатки-Збивање
 title: Git - Submodules
 url: "/book/mk/v2/Git-Алатки-Submodules.html"
+aliases:
+- "/book/mk/Git-Tools-Submodules.html"
+- "/book/mk/v1/Git-Tools-Submodules.html"
 ---
 <h2 id="_git_submodules">Submodules</h2>
 <div class="paragraph">
