--- a/external/book/content/book/mk/v2/Git-Алатки-Дебагирање-со-Git.html
+++ b/external/book/content/book/mk/v2/Git-Алатки-Дебагирање-со-Git.html
@@ -17,6 +17,9 @@ book:
     next: book/mk/v2/Git-Алатки-Submodules
 title: Git - Дебагирање со Git
 url: "/book/mk/v2/Git-Алатки-Дебагирање-со-Git.html"
+aliases:
+- "/book/mk/Git-Tools-Debugging-with-Git.html"
+- "/book/mk/v1/Git-Tools-Debugging-with-Git.html"
 ---
 <h2 id="_дебагирање_со_git">Дебагирање со Git</h2>
 <div class="paragraph">
