--- a/external/book/content/book/mk/v2/Git-Алатки-Заклучок.html
+++ b/external/book/content/book/mk/v2/Git-Алатки-Заклучок.html
@@ -17,6 +17,9 @@ book:
     next: book/mk/v2/Персонализација-на-Git-Git-Configuration
 title: Git - Заклучок
 url: "/book/mk/v2/Git-Алатки-Заклучок.html"
+aliases:
+- "/book/mk/Git-Tools-Summary.html"
+- "/book/mk/v1/Git-Tools-Summary.html"
 ---
 <h2 id="_заклучок_7">Заклучок</h2>
 <div class="paragraph">
