--- a/external/book/content/book/mk/v2/Git-Алатки-Интерактивно-стажирање.html
+++ b/external/book/content/book/mk/v2/Git-Алатки-Интерактивно-стажирање.html
@@ -17,6 +17,9 @@ book:
     next: book/mk/v2/Git-Алатки-Stashing-and-Cleaning
 title: Git - Интерактивно стажирање
 url: "/book/mk/v2/Git-Алатки-Интерактивно-стажирање.html"
+aliases:
+- "/book/mk/Git-Tools-Interactive-Staging.html"
+- "/book/mk/v1/Git-Tools-Interactive-Staging.html"
 ---
 <h2 id="_interactive_staging">Интерактивно стажирање</h2>
 <div class="paragraph">
