--- a/external/book/content/book/mk/v2/Git-Алатки-Напредно-спојување.html
+++ b/external/book/content/book/mk/v2/Git-Алатки-Напредно-спојување.html
@@ -17,6 +17,9 @@ book:
     next: book/mk/v2/Git-Алатки-Rerere
 title: Git - Напредно спојување
 url: "/book/mk/v2/Git-Алатки-Напредно-спојување.html"
+aliases:
+- "/book/mk/Git-Tools-Subtree-Merging.html"
+- "/book/mk/v1/Git-Tools-Subtree-Merging.html"
 ---
 <h2 id="_advanced_merging">Напредно спојување</h2>
 <div class="paragraph">
