--- a/external/book/content/book/mk/v2/Git-и-други-системи-Git-како-Клиент.html
+++ b/external/book/content/book/mk/v2/Git-и-други-системи-Git-како-Клиент.html
@@ -17,6 +17,11 @@ book:
     next: book/mk/v2/Git-и-други-системи-Мигрирање-кон-Git
 title: Git - Git како Клиент
 url: "/book/mk/v2/Git-и-други-системи-Git-како-Клиент.html"
+aliases:
+- "/book/mk/Git-and-Other-Systems.html"
+- "/book/mk/v1/Git-and-Other-Systems.html"
+- "/book/mk/Git-and-Other-Systems-Git-and-Subversion.html"
+- "/book/mk/v1/Git-and-Other-Systems-Git-and-Subversion.html"
 ---
 <p>Светот не е совршен.
 Обично, не можете веднаш да го префрлите секој проект со кој доаѓате во контакт со Git.
