--- a/external/book/content/book/mk/v2/Git-и-други-системи-Заклучок.html
+++ b/external/book/content/book/mk/v2/Git-и-други-системи-Заклучок.html
@@ -17,6 +17,9 @@ book:
     next: book/mk/v2/Внатрешноста-на-Git-Plumbing-and-Porcelain
 title: Git - Заклучок
 url: "/book/mk/v2/Git-и-други-системи-Заклучок.html"
+aliases:
+- "/book/mk/Git-and-Other-Systems-Summary.html"
+- "/book/mk/v1/Git-and-Other-Systems-Summary.html"
 ---
 <h2 id="_заклучок_9">Заклучок</h2>
 <div class="paragraph">
