--- a/external/book/content/book/mk/v2/Git-и-други-системи-Мигрирање-кон-Git.html
+++ b/external/book/content/book/mk/v2/Git-и-други-системи-Мигрирање-кон-Git.html
@@ -17,6 +17,9 @@ book:
     next: book/mk/v2/Git-и-други-системи-Заклучок
 title: Git - Мигрирање кон Git
 url: "/book/mk/v2/Git-и-други-системи-Мигрирање-кон-Git.html"
+aliases:
+- "/book/mk/Git-and-Other-Systems-Migrating-to-Git.html"
+- "/book/mk/v1/Git-and-Other-Systems-Migrating-to-Git.html"
 ---
 <h2 id="_migrating">Мигрирање кон Git</h2>
 <div class="paragraph">
