--- a/external/book/content/book/mk/v2/Git-на-Сервер-Гит-демон.html
+++ b/external/book/content/book/mk/v2/Git-на-Сервер-Гит-демон.html
@@ -17,6 +17,9 @@ book:
     next: book/mk/v2/Git-на-Сервер-Smart-HTTP
 title: Git - Гит демон
 url: "/book/mk/v2/Git-на-Сервер-Гит-демон.html"
+aliases:
+- "/book/mk/Git-on-the-Server-Git-Daemon.html"
+- "/book/mk/v1/Git-on-the-Server-Git-Daemon.html"
 ---
 <h2 id="_гит_демон">Гит демон</h2>
 <div class="paragraph">
