--- a/external/book/content/book/mk/v2/Git-на-Сервер-Добивање-на-Git-на-сервер.html
+++ b/external/book/content/book/mk/v2/Git-на-Сервер-Добивање-на-Git-на-сервер.html
@@ -17,6 +17,9 @@ book:
     next: book/mk/v2/Git-на-Сервер-Генерирање-на-вашиот-SSH-јавен-клуч
 title: Git - Добивање на Git на сервер
 url: "/book/mk/v2/Git-на-Сервер-Добивање-на-Git-на-сервер.html"
+aliases:
+- "/book/mk/Git-on-the-Server-Getting-Git-on-a-Server.html"
+- "/book/mk/v1/Git-on-the-Server-Getting-Git-on-a-Server.html"
 ---
 <h2 id="_getting_git_on_a_server">Добивање на Git на сервер</h2>
 <div class="paragraph">
