--- a/external/book/content/book/mk/v2/Git-на-Сервер-Заклучок.html
+++ b/external/book/content/book/mk/v2/Git-на-Сервер-Заклучок.html
@@ -17,6 +17,9 @@ book:
     next: book/mk/v2/Дистрибуиран-Git-Дистрибуирани-работни-процеси
 title: Git - Заклучок
 url: "/book/mk/v2/Git-на-Сервер-Заклучок.html"
+aliases:
+- "/book/mk/Git-on-the-Server-Summary.html"
+- "/book/mk/v1/Git-on-the-Server-Summary.html"
 ---
 <h2 id="_заклучок_4">Заклучок</h2>
 <div class="paragraph">
