--- a/external/book/content/book/mk/v2/Git-на-Сервер-Опции-за-домаќини-на-трети-лица.html
+++ b/external/book/content/book/mk/v2/Git-на-Сервер-Опции-за-домаќини-на-трети-лица.html
@@ -17,6 +17,17 @@ book:
     next: book/mk/v2/Git-на-Сервер-Заклучок
 title: Git - Опции за домаќини на трети лица
 url: "/book/mk/v2/Git-на-Сервер-Опции-за-домаќини-на-трети-лица.html"
+aliases:
+- "/book/mk/Git-on-the-Server-Public-Access.html"
+- "/book/mk/v1/Git-on-the-Server-Public-Access.html"
+- "/book/mk/Git-on-the-Server-GitWeb.html"
+- "/book/mk/v1/Git-on-the-Server-GitWeb.html"
+- "/book/mk/Git-on-the-Server-Gitosis.html"
+- "/book/mk/v1/Git-on-the-Server-Gitosis.html"
+- "/book/mk/Git-on-the-Server-Gitolite.html"
+- "/book/mk/v1/Git-on-the-Server-Gitolite.html"
+- "/book/mk/Git-on-the-Server-Hosted-Git.html"
+- "/book/mk/v1/Git-on-the-Server-Hosted-Git.html"
 ---
 <h2 id="_опции_за_домаќини_на_трети_лица">Опции за домаќини на трети лица</h2>
 <div class="paragraph">
