--- a/external/book/content/book/mk/v2/Git-на-Сервер-Поставување-на-серверот.html
+++ b/external/book/content/book/mk/v2/Git-на-Сервер-Поставување-на-серверот.html
@@ -17,6 +17,9 @@ book:
     next: book/mk/v2/Git-на-Сервер-Гит-демон
 title: Git - Поставување на серверот
 url: "/book/mk/v2/Git-на-Сервер-Поставување-на-серверот.html"
+aliases:
+- "/book/mk/Git-on-the-Server-Setting-Up-the-Server.html"
+- "/book/mk/v1/Git-on-the-Server-Setting-Up-the-Server.html"
 ---
 <h2 id="_setting_up_server">Поставување на серверот</h2>
 <div class="paragraph">
