--- a/external/book/content/book/mk/v2/Git-на-Сервер-Протоколите.html
+++ b/external/book/content/book/mk/v2/Git-на-Сервер-Протоколите.html
@@ -17,6 +17,11 @@ book:
     next: book/mk/v2/Git-на-Сервер-Добивање-на-Git-на-сервер
 title: Git - Протоколите
 url: "/book/mk/v2/Git-на-Сервер-Протоколите.html"
+aliases:
+- "/book/mk/Git-on-the-Server.html"
+- "/book/mk/v1/Git-on-the-Server.html"
+- "/book/mk/Git-on-the-Server-The-Protocols.html"
+- "/book/mk/v1/Git-on-the-Server-The-Protocols.html"
 ---
 <p>
 Во овој момент, треба да бидете во можност да ги направите повеќето од секојдневните задачи за кои ќе го користите Git.
