--- a/external/book/content/book/mk/v2/Внатрешноста-на-Git-Git-Objects.html
+++ b/external/book/content/book/mk/v2/Внатрешноста-на-Git-Git-Objects.html
@@ -17,6 +17,9 @@ book:
     next: book/mk/v2/Внатрешноста-на-Git-Git-References
 title: Git - Git Objects
 url: "/book/mk/v2/Внатрешноста-на-Git-Git-Objects.html"
+aliases:
+- "/book/mk/Git-Internals-Git-Objects.html"
+- "/book/mk/v1/Git-Internals-Git-Objects.html"
 ---
 <h2 id="_objects">Git Objects</h2>
 <div class="paragraph">
