--- a/external/book/content/book/mk/v2/Внатрешноста-на-Git-Git-References.html
+++ b/external/book/content/book/mk/v2/Внатрешноста-на-Git-Git-References.html
@@ -17,6 +17,9 @@ book:
     next: book/mk/v2/Внатрешноста-на-Git-Packfiles
 title: Git - Git References
 url: "/book/mk/v2/Внатрешноста-на-Git-Git-References.html"
+aliases:
+- "/book/mk/Git-Internals-Git-References.html"
+- "/book/mk/v1/Git-Internals-Git-References.html"
 ---
 <h2 id="_git_refs">Git References</h2>
 <div class="paragraph">
