--- a/external/book/content/book/mk/v2/Внатрешноста-на-Git-Maintenance-and-Data-Recovery.html
+++ b/external/book/content/book/mk/v2/Внатрешноста-на-Git-Maintenance-and-Data-Recovery.html
@@ -17,6 +17,9 @@ book:
     next: book/mk/v2/Внатрешноста-на-Git-Environment-Variables
 title: Git - Maintenance and Data Recovery
 url: "/book/mk/v2/Внатрешноста-на-Git-Maintenance-and-Data-Recovery.html"
+aliases:
+- "/book/mk/Git-Internals-Maintenance-and-Data-Recovery.html"
+- "/book/mk/v1/Git-Internals-Maintenance-and-Data-Recovery.html"
 ---
 <h2 id="_maintenance_and_data_recovery">Maintenance and Data Recovery</h2>
 <div class="paragraph">
