--- a/external/book/content/book/mk/v2/Внатрешноста-на-Git-Packfiles.html
+++ b/external/book/content/book/mk/v2/Внатрешноста-на-Git-Packfiles.html
@@ -17,6 +17,9 @@ book:
     next: book/mk/v2/Внатрешноста-на-Git-The-Refspec
 title: Git - Packfiles
 url: "/book/mk/v2/Внатрешноста-на-Git-Packfiles.html"
+aliases:
+- "/book/mk/Git-Internals-Packfiles.html"
+- "/book/mk/v1/Git-Internals-Packfiles.html"
 ---
 <h2 id="_packfiles">Packfiles</h2>
 <div class="paragraph">
