--- a/external/book/content/book/mk/v2/Внатрешноста-на-Git-Plumbing-and-Porcelain.html
+++ b/external/book/content/book/mk/v2/Внатрешноста-на-Git-Plumbing-and-Porcelain.html
@@ -17,6 +17,11 @@ book:
     next: book/mk/v2/Внатрешноста-на-Git-Git-Objects
 title: Git - Plumbing and Porcelain
 url: "/book/mk/v2/Внатрешноста-на-Git-Plumbing-and-Porcelain.html"
+aliases:
+- "/book/mk/Git-Internals.html"
+- "/book/mk/v1/Git-Internals.html"
+- "/book/mk/Git-Internals-Plumbing-and-Porcelain.html"
+- "/book/mk/v1/Git-Internals-Plumbing-and-Porcelain.html"
 ---
 <p>ожеби сте прескокнале во ова поглавје од многу порано поглавје, или можеби сте добиле тука по последователно читање на целата книга до оваа точка - во секој случај, ова е местото каде што ќе одиме во текот на внатрешните работи и имплементација на Git .
 Откривме дека разбирањето на овие информации беше фундаментално важно за да се сфати колку е корисен и моќен Git, но други ни тврдат дека тоа може да биде збунувачки и непотребно сложено за почетници.
