--- a/external/book/content/book/mk/v2/Внатрешноста-на-Git-The-Refspec.html
+++ b/external/book/content/book/mk/v2/Внатрешноста-на-Git-The-Refspec.html
@@ -17,6 +17,9 @@ book:
     next: book/mk/v2/Внатрешноста-на-Git-Transfer-Protocols
 title: Git - The Refspec
 url: "/book/mk/v2/Внатрешноста-на-Git-The-Refspec.html"
+aliases:
+- "/book/mk/Git-Internals-The-Refspec.html"
+- "/book/mk/v1/Git-Internals-The-Refspec.html"
 ---
 <h2 id="_refspec">The Refspec</h2>
 <div class="paragraph">
