--- a/external/book/content/book/mk/v2/Внатрешноста-на-Git-Transfer-Protocols.html
+++ b/external/book/content/book/mk/v2/Внатрешноста-на-Git-Transfer-Protocols.html
@@ -17,6 +17,9 @@ book:
     next: book/mk/v2/Внатрешноста-на-Git-Maintenance-and-Data-Recovery
 title: Git - Transfer Protocols
 url: "/book/mk/v2/Внатрешноста-на-Git-Transfer-Protocols.html"
+aliases:
+- "/book/mk/Git-Internals-Transfer-Protocols.html"
+- "/book/mk/v1/Git-Internals-Transfer-Protocols.html"
 ---
 <h2 id="_transfer_protocols">Transfer Protocols</h2>
 <div class="paragraph">
