--- a/external/book/content/book/mk/v2/Внатрешноста-на-Git-Заклучок.html
+++ b/external/book/content/book/mk/v2/Внатрешноста-на-Git-Заклучок.html
@@ -17,6 +17,9 @@ book:
     next: book/mk/v2/Appendix-A:-Git-во-други-околини-Graphical-Interfaces
 title: Git - Заклучок
 url: "/book/mk/v2/Внатрешноста-на-Git-Заклучок.html"
+aliases:
+- "/book/mk/Git-Internals-Summary.html"
+- "/book/mk/v1/Git-Internals-Summary.html"
 ---
 <h2 id="_заклучок_10">Заклучок</h2>
 <div class="paragraph">
