--- a/external/book/content/book/mk/v2/Гранење-во-Git-Branch-Management.html
+++ b/external/book/content/book/mk/v2/Гранење-во-Git-Branch-Management.html
@@ -17,6 +17,9 @@ book:
     next: book/mk/v2/Гранење-во-Git-Работни-процеси
 title: Git - Branch Management
 url: "/book/mk/v2/Гранење-во-Git-Branch-Management.html"
+aliases:
+- "/book/mk/Гранење-со-Git-Branch-Management.html"
+- "/book/mk/v1/Гранење-со-Git-Branch-Management.html"
 ---
 <h2 id="_branch_management">Branch Management</h2>
 <div class="paragraph">
