--- a/external/book/content/book/mk/v2/Гранење-во-Git-Гранење-објаснето.html
+++ b/external/book/content/book/mk/v2/Гранење-во-Git-Гранење-објаснето.html
@@ -17,6 +17,11 @@ book:
     next: book/mk/v2/Гранење-во-Git-Основно-разгранување-и-спојување
 title: Git - Гранење објаснето
 url: "/book/mk/v2/Гранење-во-Git-Гранење-објаснето.html"
+aliases:
+- "/book/mk/Гранење-со-Git.html"
+- "/book/mk/v1/Гранење-со-Git.html"
+- "/book/mk/Гранење-со-Git-Што-е-гранење.html"
+- "/book/mk/v1/Гранење-со-Git-Што-е-гранење.html"
 ---
 <p>
 Речиси секој VCS има некаква форма на разгранување.
