--- a/external/book/content/book/mk/v2/Гранење-во-Git-Далечински-гранки.html
+++ b/external/book/content/book/mk/v2/Гранење-во-Git-Далечински-гранки.html
@@ -17,6 +17,9 @@ book:
     next: book/mk/v2/Гранење-во-Git-Ребаза
 title: Git - Далечински гранки
 url: "/book/mk/v2/Гранење-во-Git-Далечински-гранки.html"
+aliases:
+- "/book/mk/Гранење-со-Git-Remote-Branches.html"
+- "/book/mk/v1/Гранење-со-Git-Remote-Branches.html"
 ---
 <h2 id="_remote_branches">Далечински гранки</h2>
 <div class="paragraph">
