--- a/external/book/content/book/mk/v2/Гранење-во-Git-Заклучок.html
+++ b/external/book/content/book/mk/v2/Гранење-во-Git-Заклучок.html
@@ -17,6 +17,9 @@ book:
     next: book/mk/v2/Git-на-Сервер-Протоколите
 title: Git - Заклучок
 url: "/book/mk/v2/Гранење-во-Git-Заклучок.html"
+aliases:
+- "/book/mk/Гранење-со-Git-Summary.html"
+- "/book/mk/v1/Гранење-со-Git-Summary.html"
 ---
 <h2 id="_заклучок_3">Заклучок</h2>
 <div class="paragraph">
