--- a/external/book/content/book/mk/v2/Гранење-во-Git-Основно-разгранување-и-спојување.html
+++ b/external/book/content/book/mk/v2/Гранење-во-Git-Основно-разгранување-и-спојување.html
@@ -17,6 +17,9 @@ book:
     next: book/mk/v2/Гранење-во-Git-Branch-Management
 title: Git - Основно разгранување и спојување
 url: "/book/mk/v2/Гранење-во-Git-Основно-разгранување-и-спојување.html"
+aliases:
+- "/book/mk/Гранење-со-Git-Основно-Гранење-и-Спојување.html"
+- "/book/mk/v1/Гранење-со-Git-Основно-Гранење-и-Спојување.html"
 ---
 <h2 id="_основно_разгранување_и_спојување">Основно разгранување и спојување</h2>
 <div class="paragraph">
