--- a/external/book/content/book/mk/v2/Гранење-во-Git-Работни-процеси.html
+++ b/external/book/content/book/mk/v2/Гранење-во-Git-Работни-процеси.html
@@ -17,6 +17,9 @@ book:
     next: book/mk/v2/Гранење-во-Git-Далечински-гранки
 title: Git - Работни процеси
 url: "/book/mk/v2/Гранење-во-Git-Работни-процеси.html"
+aliases:
+- "/book/mk/Гранење-со-Git-Branching-Workflows.html"
+- "/book/mk/v1/Гранење-со-Git-Branching-Workflows.html"
 ---
 <h2 id="_работни_процеси">Работни процеси</h2>
 <div class="paragraph">
