--- a/external/book/content/book/mk/v2/Гранење-во-Git-Ребаза.html
+++ b/external/book/content/book/mk/v2/Гранење-во-Git-Ребаза.html
@@ -17,6 +17,9 @@ book:
     next: book/mk/v2/Гранење-во-Git-Заклучок
 title: Git - Ребаза
 url: "/book/mk/v2/Гранење-во-Git-Ребаза.html"
+aliases:
+- "/book/mk/Гранење-со-Git-Rebasing.html"
+- "/book/mk/v1/Гранење-со-Git-Rebasing.html"
 ---
 <h2 id="_rebasing">Ребаза</h2>
 <div class="paragraph">
