--- a/external/book/content/book/mk/v2/Дистрибуиран-Git-Дистрибуирани-работни-процеси.html
+++ b/external/book/content/book/mk/v2/Дистрибуиран-Git-Дистрибуирани-работни-процеси.html
@@ -17,6 +17,11 @@ book:
     next: book/mk/v2/Дистрибуиран-Git-Придонес-кон-проект
 title: Git - Дистрибуирани работни процеси
 url: "/book/mk/v2/Дистрибуиран-Git-Дистрибуирани-работни-процеси.html"
+aliases:
+- "/book/mk/Дистрибуиран-Git.html"
+- "/book/mk/v1/Дистрибуиран-Git.html"
+- "/book/mk/Дистрибуиран-Git-Дистрибуирани-начини-на-работа.html"
+- "/book/mk/v1/Дистрибуиран-Git-Дистрибуирани-начини-на-работа.html"
 ---
 <p>
 Сега кога имате оддалечено Git складиште кое е поставено како фокусна точка за сите развивачи да го споделат нивниот код, а вие сте запознаени со основните команди Git во еден локален работен проток, ќе погледнете како да користите некои од дистрибуираните работни чекори дека Git ви овозможува.</p><p>Во ова поглавје, ќе видите како да работите со Git во дистрибуирана средина како соработник и интегратор.
