--- a/external/book/content/book/mk/v2/Дистрибуиран-Git-Одржување-на-проект.html
+++ b/external/book/content/book/mk/v2/Дистрибуиран-Git-Одржување-на-проект.html
@@ -17,6 +17,9 @@ book:
     next: book/mk/v2/Дистрибуиран-Git-Заклучок
 title: Git - Одржување на проект
 url: "/book/mk/v2/Дистрибуиран-Git-Одржување-на-проект.html"
+aliases:
+- "/book/mk/Дистрибуиран-Git-Summary.html"
+- "/book/mk/v1/Дистрибуиран-Git-Summary.html"
 ---
 <h2 id="_одржување_на_проект">Одржување на проект</h2>
 <div class="paragraph">
