--- a/external/book/content/book/mk/v2/Дистрибуиран-Git-Приватен-мал-тим.html
+++ b/external/book/content/book/mk/v2/Дистрибуиран-Git-Приватен-мал-тим.html
@@ -17,6 +17,9 @@ book:
     next: book/mk/v2/Дистрибуиран-Git-Одржување-на-проект
 title: Git - Приватен мал тим
 url: "/book/mk/v2/Дистрибуиран-Git-Приватен-мал-тим.html"
+aliases:
+- "/book/mk/Дистрибуиран-Git-Maintaining-a-Project.html"
+- "/book/mk/v1/Дистрибуиран-Git-Maintaining-a-Project.html"
 ---
 <h2 id="_private_team">Приватен мал тим</h2>
 <div class="paragraph">
