--- a/external/book/content/book/mk/v2/Дистрибуиран-Git-Придонес-кон-проект.html
+++ b/external/book/content/book/mk/v2/Дистрибуиран-Git-Придонес-кон-проект.html
@@ -17,6 +17,9 @@ book:
     next: book/mk/v2/Дистрибуиран-Git-Приватен-мал-тим
 title: Git - Придонес кон проект
 url: "/book/mk/v2/Дистрибуиран-Git-Придонес-кон-проект.html"
+aliases:
+- "/book/mk/Дистрибуиран-Git-Contributing-to-a-Project.html"
+- "/book/mk/v1/Дистрибуиран-Git-Contributing-to-a-Project.html"
 ---
 <h2 id="_contributing_project">Придонес кон проект</h2>
 <div class="paragraph">
