--- a/external/book/content/book/mk/v2/Основите-на-Git-Git-Алијаси.html
+++ b/external/book/content/book/mk/v2/Основите-на-Git-Git-Алијаси.html
@@ -17,6 +17,9 @@ book:
     next: book/mk/v2/Основите-на-Git-Заклучок
 title: Git - Git Алијаси
 url: "/book/mk/v2/Основите-на-Git-Git-Алијаси.html"
+aliases:
+- "/book/mk/Основи-на-Git-Tips-and-Tricks.html"
+- "/book/mk/v1/Основи-на-Git-Tips-and-Tricks.html"
 ---
 <h2 id="_git_aliases">Git Алијаси</h2>
 <div class="paragraph">
