--- a/external/book/content/book/mk/v2/Основите-на-Git-Tagging.html
+++ b/external/book/content/book/mk/v2/Основите-на-Git-Tagging.html
@@ -17,6 +17,9 @@ book:
     next: book/mk/v2/Основите-на-Git-Git-Алијаси
 title: Git - Tagging
 url: "/book/mk/v2/Основите-на-Git-Tagging.html"
+aliases:
+- "/book/mk/Основи-на-Git-Tagging.html"
+- "/book/mk/v1/Основи-на-Git-Tagging.html"
 ---
 <h2 id="_git_tagging">Tagging</h2>
 <div class="paragraph">
