--- a/external/book/content/book/mk/v2/Основите-на-Git-Working-with-Remotes.html
+++ b/external/book/content/book/mk/v2/Основите-на-Git-Working-with-Remotes.html
@@ -17,6 +17,9 @@ book:
     next: book/mk/v2/Основите-на-Git-Tagging
 title: Git - Working with Remotes
 url: "/book/mk/v2/Основите-на-Git-Working-with-Remotes.html"
+aliases:
+- "/book/mk/Основи-на-Git-Working-with-Remotes.html"
+- "/book/mk/v1/Основи-на-Git-Working-with-Remotes.html"
 ---
 <h2 id="_remote_repos">Working with Remotes</h2>
 <div class="paragraph">
