--- a/external/book/content/book/mk/v2/Основите-на-Git-Добивање-складиште-за-Git.html
+++ b/external/book/content/book/mk/v2/Основите-на-Git-Добивање-складиште-за-Git.html
@@ -17,6 +17,11 @@ book:
     next: book/mk/v2/Основите-на-Git-Снимање-на-промени-во-складиштето
 title: Git - Добивање складиште за Git
 url: "/book/mk/v2/Основите-на-Git-Добивање-складиште-за-Git.html"
+aliases:
+- "/book/mk/Основи-на-Git.html"
+- "/book/mk/v1/Основи-на-Git.html"
+- "/book/mk/Основи-на-Git-Добивање-Git-Репозитори.html"
+- "/book/mk/v1/Основи-на-Git-Добивање-Git-Репозитори.html"
 ---
 <p>Ако можете да прочитате само едно поглавје за да одите со Git, тоа е тоа.
 Ова поглавје ја опфаќа секоја основна команда што ви е потребна за да го направите огромното мнозинство на работи што на крајот ќе го потрошите вашето време со Git.
