--- a/external/book/content/book/mk/v2/Основите-на-Git-Заклучок.html
+++ b/external/book/content/book/mk/v2/Основите-на-Git-Заклучок.html
@@ -17,6 +17,9 @@ book:
     next: book/mk/v2/Гранење-во-Git-Гранење-објаснето
 title: Git - Заклучок
 url: "/book/mk/v2/Основите-на-Git-Заклучок.html"
+aliases:
+- "/book/mk/Основи-на-Git-Summary.html"
+- "/book/mk/v1/Основи-на-Git-Summary.html"
 ---
 <h2 id="_заклучок_2">Заклучок</h2>
 <div class="paragraph">
