--- a/external/book/content/book/mk/v2/Основите-на-Git-Поништување-на-нештата.html
+++ b/external/book/content/book/mk/v2/Основите-на-Git-Поништување-на-нештата.html
@@ -17,6 +17,9 @@ book:
     next: book/mk/v2/Основите-на-Git-Working-with-Remotes
 title: Git - Поништување на нештата
 url: "/book/mk/v2/Основите-на-Git-Поништување-на-нештата.html"
+aliases:
+- "/book/mk/Основи-на-Git-Undoing-Things.html"
+- "/book/mk/v1/Основи-на-Git-Undoing-Things.html"
 ---
 <h2 id="_undoing">Поништување на нештата</h2>
 <div class="paragraph">
