--- a/external/book/content/book/mk/v2/Основите-на-Git-Прикажување-на-историјата-на-извршување.html
+++ b/external/book/content/book/mk/v2/Основите-на-Git-Прикажување-на-историјата-на-извршување.html
@@ -17,6 +17,9 @@ book:
     next: book/mk/v2/Основите-на-Git-Поништување-на-нештата
 title: Git - Прикажување на историјата на извршување
 url: "/book/mk/v2/Основите-на-Git-Прикажување-на-историјата-на-извршување.html"
+aliases:
+- "/book/mk/Основи-на-Git-Viewing-the-Commit-History.html"
+- "/book/mk/v1/Основи-на-Git-Viewing-the-Commit-History.html"
 ---
 <h2 id="_viewing_history">Прикажување на историјата на извршување</h2>
 <div class="paragraph">
