--- a/external/book/content/book/mk/v2/Основите-на-Git-Снимање-на-промени-во-складиштето.html
+++ b/external/book/content/book/mk/v2/Основите-на-Git-Снимање-на-промени-во-складиштето.html
@@ -17,6 +17,9 @@ book:
     next: book/mk/v2/Основите-на-Git-Прикажување-на-историјата-на-извршување
 title: Git - Снимање на промени во складиштето
 url: "/book/mk/v2/Основите-на-Git-Снимање-на-промени-во-складиштето.html"
+aliases:
+- "/book/mk/Основи-на-Git-Зачувување-на-промени-во-вашето-репозитори.html"
+- "/book/mk/v1/Основи-на-Git-Зачувување-на-промени-во-вашето-репозитори.html"
 ---
 <h2 id="_снимање_на_промени_во_складиштето">Снимање на промени во складиштето</h2>
 <div class="paragraph">
