--- a/external/book/content/book/mk/v2/Персонализација-на-Git-An-Example-Git-Enforced-Policy.html
+++ b/external/book/content/book/mk/v2/Персонализација-на-Git-An-Example-Git-Enforced-Policy.html
@@ -17,6 +17,9 @@ book:
     next: book/mk/v2/Персонализација-на-Git-Заклучок
 title: Git - An Example Git-Enforced Policy
 url: "/book/mk/v2/Персонализација-на-Git-An-Example-Git-Enforced-Policy.html"
+aliases:
+- "/book/mk/Customizing-Git-An-Example-Git-Enforced-Policy.html"
+- "/book/mk/v1/Customizing-Git-An-Example-Git-Enforced-Policy.html"
 ---
 <h2 id="_an_example_git_enforced_policy">An Example Git-Enforced Policy</h2>
 <div class="paragraph">
