--- a/external/book/content/book/mk/v2/Персонализација-на-Git-Git-Configuration.html
+++ b/external/book/content/book/mk/v2/Персонализација-на-Git-Git-Configuration.html
@@ -17,6 +17,11 @@ book:
     next: book/mk/v2/Персонализација-на-Git-Git-Атрибути
 title: Git - Git Configuration
 url: "/book/mk/v2/Персонализација-на-Git-Git-Configuration.html"
+aliases:
+- "/book/mk/Customizing-Git.html"
+- "/book/mk/v1/Customizing-Git.html"
+- "/book/mk/Customizing-Git-Git-Configuration.html"
+- "/book/mk/v1/Customizing-Git-Git-Configuration.html"
 ---
 <p>Досега, ги покриваме основите за тоа како функционира Git и како да го користиме, и воведовме голем број на алатки кои Git обезбедува за да ви помогне да ги користите лесно и ефикасно.
 Во ова поглавје, ќе видиме како можете да го направите Git да работи на поприлагоден начин, со воведување на неколку важни конфигурациски поставки и системот за куки.
