--- a/external/book/content/book/mk/v2/Персонализација-на-Git-Git-Hooks.html
+++ b/external/book/content/book/mk/v2/Персонализација-на-Git-Git-Hooks.html
@@ -17,6 +17,9 @@ book:
     next: book/mk/v2/Персонализација-на-Git-An-Example-Git-Enforced-Policy
 title: Git - Git Hooks
 url: "/book/mk/v2/Персонализација-на-Git-Git-Hooks.html"
+aliases:
+- "/book/mk/Customizing-Git-Git-Hooks.html"
+- "/book/mk/v1/Customizing-Git-Git-Hooks.html"
 ---
 <h2 id="_git_hooks">Git Hooks</h2>
 <div class="paragraph">
