--- a/external/book/content/book/mk/v2/Персонализација-на-Git-Git-Атрибути.html
+++ b/external/book/content/book/mk/v2/Персонализација-на-Git-Git-Атрибути.html
@@ -17,6 +17,9 @@ book:
     next: book/mk/v2/Персонализација-на-Git-Git-Hooks
 title: Git - Git Атрибути
 url: "/book/mk/v2/Персонализација-на-Git-Git-Атрибути.html"
+aliases:
+- "/book/mk/Customizing-Git-Git-Attributes.html"
+- "/book/mk/v1/Customizing-Git-Git-Attributes.html"
 ---
 <h2 id="_git_атрибути">Git Атрибути</h2>
 <div class="paragraph">
