--- a/external/book/content/book/mk/v2/Персонализација-на-Git-Заклучок.html
+++ b/external/book/content/book/mk/v2/Персонализација-на-Git-Заклучок.html
@@ -17,6 +17,9 @@ book:
     next: book/mk/v2/Git-и-други-системи-Git-како-Клиент
 title: Git - Заклучок
 url: "/book/mk/v2/Персонализација-на-Git-Заклучок.html"
+aliases:
+- "/book/mk/Customizing-Git-Summary.html"
+- "/book/mk/v1/Customizing-Git-Summary.html"
 ---
 <h2 id="_заклучок_8">Заклучок</h2>
 <div class="paragraph">
