--- a/external/book/content/book/mk/v2/Почеток-First-Time-Git-Setup.html
+++ b/external/book/content/book/mk/v2/Почеток-First-Time-Git-Setup.html
@@ -17,6 +17,9 @@ book:
     next: book/mk/v2/Почеток-Getting-Help
 title: Git - First-Time Git Setup
 url: "/book/mk/v2/Почеток-First-Time-Git-Setup.html"
+aliases:
+- "/book/mk/Како-да-започнам-Прво-поставување-на-Git.html"
+- "/book/mk/v1/Како-да-започнам-Прво-поставување-на-Git.html"
 ---
 <h2 id="_first_time">First-Time Git Setup</h2>
 <div class="paragraph">
