--- a/external/book/content/book/mk/v2/Почеток-Getting-Help.html
+++ b/external/book/content/book/mk/v2/Почеток-Getting-Help.html
@@ -17,6 +17,9 @@ book:
     next: book/mk/v2/Почеток-Заклучок
 title: Git - Getting Help
 url: "/book/mk/v2/Почеток-Getting-Help.html"
+aliases:
+- "/book/mk/Како-да-започнам-Добивање-помош.html"
+- "/book/mk/v1/Како-да-започнам-Добивање-помош.html"
 ---
 <h2 id="_git_help">Getting Help</h2>
 <div class="paragraph">
