--- a/external/book/content/book/mk/v2/Почеток-За-верзиска-контрола.html
+++ b/external/book/content/book/mk/v2/Почеток-За-верзиска-контрола.html
@@ -17,6 +17,11 @@ book:
     next: book/mk/v2/Почеток-Кратка-историја-на-Git
 title: Git - За верзиска контрола
 url: "/book/mk/v2/Почеток-За-верзиска-контрола.html"
+aliases:
+- "/book/mk/Како-да-започнам.html"
+- "/book/mk/v1/Како-да-започнам.html"
+- "/book/mk/Како-да-започнам-За-контрола-на-верзиите.html"
+- "/book/mk/v1/Како-да-започнам-За-контрола-на-верзиите.html"
 ---
 <p>Ова поглавје ќе започне со Гит(Git).
 Ќе започнеме со објаснување на некоја позадина во алатките за верзиска контрола, потоа преминувајќи на инсталирањето на Git во вашиот компјутер и конечно како да го подесите за да започнете со работа.
