--- a/external/book/content/book/mk/v2/Почеток-Заклучок.html
+++ b/external/book/content/book/mk/v2/Почеток-Заклучок.html
@@ -17,6 +17,9 @@ book:
     next: book/mk/v2/Основите-на-Git-Добивање-складиште-за-Git
 title: Git - Заклучок
 url: "/book/mk/v2/Почеток-Заклучок.html"
+aliases:
+- "/book/mk/Како-да-започнам-Преглед.html"
+- "/book/mk/v1/Како-да-започнам-Преглед.html"
 ---
 <h2 id="_заклучок">Заклучок</h2>
 <div class="paragraph">
