--- a/external/book/content/book/mk/v2/Почеток-Инсталирање-на-Git.html
+++ b/external/book/content/book/mk/v2/Почеток-Инсталирање-на-Git.html
@@ -17,6 +17,9 @@ book:
     next: book/mk/v2/Почеток-First-Time-Git-Setup
 title: Git - Инсталирање на Git
 url: "/book/mk/v2/Почеток-Инсталирање-на-Git.html"
+aliases:
+- "/book/mk/Како-да-започнам-Инсталација-на-Git.html"
+- "/book/mk/v1/Како-да-започнам-Инсталација-на-Git.html"
 ---
 <h2 id="_инсталирање_на_git">Инсталирање на Git</h2>
 <div class="paragraph">
