--- a/external/book/content/book/mk/v2/Почеток-Кратка-историја-на-Git.html
+++ b/external/book/content/book/mk/v2/Почеток-Кратка-историја-на-Git.html
@@ -17,6 +17,9 @@ book:
     next: book/mk/v2/Почеток-Основи-на-Гит
 title: Git - Кратка историја на Git
 url: "/book/mk/v2/Почеток-Кратка-историја-на-Git.html"
+aliases:
+- "/book/mk/Како-да-започнам-Кратка-историја-на-Git.html"
+- "/book/mk/v1/Како-да-започнам-Кратка-историја-на-Git.html"
 ---
 <h2 id="_кратка_историја_на_git">Кратка историја на Git</h2>
 <div class="paragraph">
