--- a/external/book/content/book/mk/v2/Почеток-Основи-на-Гит.html
+++ b/external/book/content/book/mk/v2/Почеток-Основи-на-Гит.html
@@ -17,6 +17,9 @@ book:
     next: book/mk/v2/Почеток-Командната-линија
 title: Git - Основи на Гит
 url: "/book/mk/v2/Почеток-Основи-на-Гит.html"
+aliases:
+- "/book/mk/Како-да-започнам-Основи-на-Git.html"
+- "/book/mk/v1/Како-да-започнам-Основи-на-Git.html"
 ---
 <h2 id="_основи_на_гит">Основи на Гит</h2>
 <div class="paragraph">
