--- a/external/book/content/book/mk/v2/Appendix-C:-Git-команди-Setup-and-Config.html
+++ b/external/book/content/book/mk/v2/Appendix-C:-Git-команди-Setup-and-Config.html
@@ -17,6 +17,9 @@ book:
     next: book/mk/v2/Appendix-C:-Git-команди-Getting-and-Creating-Projects
 title: Git - Setup and Config
 url: "/book/mk/v2/Appendix-C:-Git-команди-Setup-and-Config.html"
+aliases:
+- "/book/mk/commands.html"
+- "/book/mk/v1/commands.html"
 ---
 <p>Throughout the book we have introduced dozens of Git commands and have tried hard to introduce them within something of a narrative, adding more commands to the story slowly.
 However, this leaves us with examples of usage of the commands somewhat scattered throughout the whole book.</p><p>In this appendix, we’ll go through all the Git commands we addressed throughout the book, grouped roughly by what they’re used for.
