--- a/external/book/content/book/mk/v2/Git-Алатки-Rewriting-History.html
+++ b/external/book/content/book/mk/v2/Git-Алатки-Rewriting-History.html
@@ -17,6 +17,9 @@ book:
     next: book/mk/v2/Git-Алатки-Reset-Demystified
 title: Git - Rewriting History
 url: "/book/mk/v2/Git-Алатки-Rewriting-History.html"
+aliases:
+- "/book/mk/Git-Tools-Rewriting-History.html"
+- "/book/mk/v1/Git-Tools-Rewriting-History.html"
 ---
 <h2 id="_rewriting_history">Rewriting History</h2>
 <div class="paragraph">
