--- a/external/book/content/book/mk/v2/Git-на-Сервер-Генерирање-на-вашиот-SSH-јавен-клуч.html
+++ b/external/book/content/book/mk/v2/Git-на-Сервер-Генерирање-на-вашиот-SSH-јавен-клуч.html
@@ -17,6 +17,9 @@ book:
     next: book/mk/v2/Git-на-Сервер-Поставување-на-серверот
 title: Git - Генерирање на вашиот SSH јавен клуч
 url: "/book/mk/v2/Git-на-Сервер-Генерирање-на-вашиот-SSH-јавен-клуч.html"
+aliases:
+- "/book/mk/Git-on-the-Server-Generating-Your-SSH-Public-Key.html"
+- "/book/mk/v1/Git-on-the-Server-Generating-Your-SSH-Public-Key.html"
 ---
 <h2 id="_generate_ssh_key">Генерирање на вашиот SSH јавен клуч</h2>
 <div class="paragraph">
