--- a/external/book/content/book/mk/v2/_index.html
+++ b/external/book/content/book/mk/v2/_index.html
@@ -13,5 +13,6 @@ page_title: Git - Book
 url: "/book/mk/v2.html"
 aliases:
 - "/book/mk/v2/index.html"
+- "/book/mk/v1/index.html"
 - "/book/mk/index.html"
 ---
